# cppy

./: .gitmodules  CMakeLists.txt  csv.hpp  io.h  log.h  main.cpp  main2.cpp  ndarray.h  net.h  numeric.h  prj.conf  range.h  split.hpp  tcp.cpp  tcp.h  zip.h
.devcontainer/: devcontainer.json
include/: linear_regression.h  log.h  map.h  memory.h  ndarray.h  tee.hpp
src/: main3.cpp
test/: CMakeLists.txt  prj.conf  testcase.yaml
test/src/: main.cpp
